src/test/ui/impl-trait/method-suggestion-no-duplication.stderr
error[E0599]: no method named `is_empty` found for type `Foo` in the current scope
  --> $DIR/method-suggestion-no-duplication.rs:7:15
   |
LL | struct Foo;
   | ----------- method `is_empty` not found for this
...
LL |     foo(|s| s.is_empty());
   |               ^^^^^^^^
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `is_empty`, perhaps you need to implement it:
           candidate #1: `std::iter::ExactSizeIterator`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
